UNRELEASED
- Add default parameter to encoder, allowing for unsupported types to be
  encoded.
- Treat object_pairs_hook the same in pure Python mode as with extension

0.10.0
- Support No-Op type (decoder only)
- Allow for object keys to be interned, saving memory if repeated (PY3 only)
- Use PyUnicode_FromStringAndSize instead of PyUnicode_DecodeUTF8 (decoder)
- Open file for writing, not appending (to/from json utility)
- Used more compact json encoding (to/from json utility)
- Enable object key interning (to/from json utility)

0.9.0
- C extension re-implemented (without Cython) with major speedup (7-10x)
- object_pairs_hook now works like built-in json module
- Minor pure version improvements
- Windows build compatibility

0.8.5
- Added Python 3.5 to classifiers list
- Fix index in argv (command line utility)

0.8.4
- License information update
- Allow for lack of stdin/stdout/stdout buffer access (#1)
- Allow for extenion building to be skipped via env. var (#2)

0.8.3
- Initial public release